<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PuzzleMe</string>
    <string name="credits">Credits</string>
    <string name="gallery">Load a picture</string>
    <string name="camera">Take a picture</string>
    <string name="start">Start Puzzle!</string>
    <string name="send">Share Puzzle in Google+</string>
    <string name="preview">Puzzle Preview</string>
    <string name="newGame">New Puzzle</string>
    <string name="newNetworkGame">Puzzle with others</string>
    <string name="quickGame">Quick Puzzle</string>
    <string name="download">Download Puzzle</string>
    <string name="emailLog">Email log</string>
    <string name="ok">OK</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectPieces">Select Puzzle Difficulty:</string>
    <string name="developer">Developer</string>
    <string name="size2">2 x 2</string>
    <string name="size3">3 x 3</string>
    <string name="size4">4 x 4</string>
    <string name="size5">5 x 5</string>
    <string name="size6">6 x 6</string>
    <string name="score">Score:</string>
    <string name="scoreInitial">000</string>
    <string name="eulaDummy">dummy EULA text, will be replaced at runtime</string>
    <string name="currentScore">current score is 9877</string>
    <string name="leadersBoard">Leaders Board</string>
    <string name="achievements">Achievements</string>
    <string name="signInDescription">Sign in for real fun</string>
    <string name="signOut">Signout from Google+</string>
    <string name="preference_file_key">com.alon.android.puzzle.PREFERENCE_FILE_KEY</string>
    <string name="leaderboard_id">CgkI46SnrLAeEAIQAA</string>
    <string name="achievement_second_grade">CgkI46SnrLAeEAIQAg</string>
    <string name="achievement_third_grade">CgkI46SnrLAeEAIQAw</string>
    <string name="achievement_fourth_grade">CgkI46SnrLAeEAIQBA</string>
    <string name="achievement_fifth_grade">CgkI46SnrLAeEAIQBQ</string>
    <string name="achievement_sixth_grade">CgkI46SnrLAeEAIQBg</string>
    <string name="title_activity_logs">LogsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="cleanLog">Clean Log</string>
    <string name="logDummy">Dummy text for log</string>
    <string name="inviteFriend">Invite a Friend</string>
    <string name="invitationInbox">Invitations Inbox</string>
    <string name="wall">Extras</string>
    <string name="cleanSettings">Clean Settings</string>
    <string name="sendPuzzle">Send puzzle to friend</string>
    
</resources>