<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alon.android.puzzle.PiecesActivity" >

    <TextView
        android:id="@+id/txtPieces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectPieces" 
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnSize2"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSize2"
        android:text="@string/size2" />

    <Button
        android:id="@+id/btnSize3"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSize3"
        android:text="@string/size3" />

    <Button
        android:id="@+id/btnSize4"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSize4"
        android:text="@string/size4" />

    <Button
        android:id="@+id/btnSize5"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSize5"
        android:text="@string/size5" />

    <Button
        android:id="@+id/btnSize6"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSize6"
        android:text="@string/size6" />

</LinearLayout>