<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alon.android.puzzle.ActivityMain" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLabelScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/score"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreInitial"
            android:textColor="#1e53ed"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNewGame"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_play"
        android:text="@string/newGame" />
    
    <Button
        android:id="@+id/btnNewNetworkGame"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_play"
        android:text="@string/newNetworkGame" />
    
    <TextView
        android:id="@+id/textSignDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/signInDescription"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLeaders"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_important"
        android:text="@string/leadersBoard"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAchievements"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_important"
        android:text="@string/achievements"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCredits"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_important"
        android:text="@string/credits" />

    <Button
        android:id="@+id/sign_out_button"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/signout"
        android:text="@string/signOut"
        android:visibility="gone" />

</LinearLayout>