<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alon.android.puzzle.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtLabelScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:text="@string/score" />

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#1e53ed"
            android:text="@string/scoreInitial" />
    </LinearLayout>
    
    
     <Button
        android:id="@+id/btnNewGame"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newGame"
        android:text="@string/newGame" />
     <Button
        android:id="@+id/btnLeadersBoard"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="leadersBoard"
        android:text="@string/leadersBoard" />
     

</LinearLayout>