<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alon.android.puzzle.NewGameActivity" >

    <Button
        android:id="@+id/btnGallery"
        android:drawableLeft="@drawable/ic_action_picture"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery" />

    <Button
        android:id="@+id/btnCamera"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_camera"
        android:text="@string/camera" />

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:contentDescription="@string/preview"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/btnPieces"
        android:drawableLeft="@drawable/ic_action_select_all"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnStart"
        android:drawableLeft="@drawable/ic_action_play"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

</LinearLayout>