<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alon.android.puzzle.ActivityMain" >

    <Button
        android:id="@+id/btnLeaders"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_important"
        android:text="@string/leadersBoard"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAchievements"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_important"
        android:text="@string/achievements"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCredits"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_important"
        android:text="@string/credits" />

    <Button
        android:id="@+id/btnLog"
        style="@style/btnStyleSandrift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logs"
        android:visibility="invisible" />

</LinearLayout>